syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actual_lrp.proto";
import "error.proto";

message ActualLRPLifecycleResponse {
  optional Error error = 1;
}

message ActualLRPGroupsResponse {
  optional Error error = 1;
  repeated ActualLRPGroup actual_lrp_groups = 2;
}

message ActualLRPGroupResponse {
  optional Error error = 1;
  optional ActualLRPGroup actual_lrp_group = 2;
}

message ActualLRPGroupsRequest {
  optional string domain = 1;
  optional string cell_id = 2;
}

message ActualLRPGroupsByProcessGuidRequest {
  optional string process_guid = 1;
}

message ActualLRPGroupByProcessGuidAndIndexRequest {
  optional string process_guid = 1;
  optional int32 index = 2;
}

message ClaimActualLRPRequest {
  optional string process_guid = 1;
  optional int32 index = 2;
  optional ActualLRPInstanceKey actual_lrp_instance_key = 3;
}

message StartActualLRPRequest {
  optional ActualLRPKey actual_lrp_key = 1;
  optional ActualLRPInstanceKey actual_lrp_instance_key = 2;
  optional ActualLRPNetInfo actual_lrp_net_info = 3;
}

message CrashActualLRPRequest {
  optional ActualLRPKey actual_lrp_key = 1;
  optional ActualLRPInstanceKey actual_lrp_instance_key = 2;
  optional string error_message = 3;
}

message FailActualLRPRequest {
  optional ActualLRPKey actual_lrp_key = 1;
  optional string error_message = 2;
}

message RetireActualLRPRequest {
  optional ActualLRPKey actual_lrp_key = 1;
}

message RemoveActualLRPRequest {
  optional string process_guid = 1;
  optional int32 index = 2;
}
