syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = false;
option (gogoproto.goproto_enum_prefix_all) = true;

message Error {
  enum Type {
    UnknownError = 0;
    InvalidDomain = 1;

    UnkownVersion          = 2;
    InvalidRecord          = 3;
    InvalidRequest         = 4;
    InvalidResponse        = 5;
    InvalidProtobufMessage = 6;
    InvalidJSON            = 7;
    FailedToOpenEnvelope   = 8;
    InvalidStateTransition = 9;

    Unauthorized = 10;

    ResourceConflict = 11;
    ResourceExists   = 12;
    ResourceNotFound = 13;
    RouterError      = 14;

    ActualLRPCannotBeClaimed   = 15;
    ActualLRPCannotBeStarted   = 16;
    ActualLRPCannotBeCrashed   = 17;
    ActualLRPCannotBeFailed    = 18;
    ActualLRPCannotBeRemoved   = 19;
    ActualLRPCannotBeStopped   = 20;
    ActualLRPCannotBeUnclaimed = 21;
    ActualLRPCannotBeEvacuated = 22;

    DesiredLRPCannotBeUpdated = 23;

    RunningOnDifferentCell = 24;
  }
  optional Type type = 1 [(gogoproto.nullable) = false];
  optional string message = 2 [(gogoproto.nullable) = false];
}
